@@ -152,14 +152,14 @@ else {
 		}
 	$start_time = time();
 	&start_print_capture();
-	($ok, $size) = &backup_domains($dest, \@doms, \@do_features,
+	($ok, $size, $errdoms) = &backup_domains($dest, \@doms, \@do_features,
 				       $in{'fmt'}, $in{'errors'}, \%options,
 				       $in{'fmt'} == 2, \@vbs, $in{'mkdir'},
 				       $in{'onebyone'}, $cbmode >= 2,
 				       undef, $in{'increment'});
 	$output = &stop_print_capture();
 	&write_backup_log(\@doms, $dest, $in{'increment'}, $start_time,
-			  $size, $ok, "cgi", $output);
+			  $size, $ok, "cgi", $output, $errdoms);
 	&run_post_actions();
 	if (!$ok) {
 		#&unlink_file($dest);
