@@ -128,6 +128,7 @@ $current_id = undef;
 			       $cbmode == 2,
 			       \&backup_cbfunc,
 			       $sched->{'increment'});
+print STDERR "errdoms=",join(" ", @$errdoms),"\n";
 
 # If purging old backups, do that now
 if ($ok && $sched->{'purge'}) {
@@ -151,7 +152,7 @@ if ($sched->{'after'}) {
 		}
 	}
 &write_backup_log(\@doms, $dest, $backup->{'incremental'}, $start_time,
-		  $size, $ok, "sched", $output);
+		  $size, $ok, "sched", $output, $errdoms);
 
 PREFAILED:
 
