@@ -4936,6 +4936,7 @@ backuplog_nomatch=No backup logs matching your search were found.
 backuplog_none=No backups have been logged yet.
 backuplog_none2=No backups that you have access to have been logged.
 backuplog_doms=$1 domains
+backuplog_part=Partial
 backuplog_nodoms=No domains
 backuplog_return=backup log listing
 
@@ -4945,6 +4946,7 @@ viewbackup_egone=Logged backup does not exist!
 viewbackup_header=Backup details
 viewbackup_dest=Backup destination
 viewbackup_doms=Virtual servers included
+viewbackup_errdoms=Virtual servers that failed
 viewbackup_mode=Executed via
 viewbackup_mode_api=Command line
 viewbackup_mode_sched=Scheduled backup
@@ -4962,3 +4964,4 @@ viewbackup_inc0=Full
 viewbackup_ok=Final status
 viewbackup_success=Succeeded
 viewbackup_failure=Failed
+viewbackup_partial=Partially completed
